--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.xpoft.vaadin</groupId>
     <artifactId>spring-vaadin-integration</artifactId>
-    <version>4.0.CITC4</version>
+    <version>4.1.CITC4-SNAPSHOT</version>
     <name>SpringVaadinIntegration</name>
     <packaging>bundle</packaging>
     <url>https://github.com/vladimirfx/spring-vaadin</url>
@@ -29,7 +29,7 @@
         <url>https://github.com/vladimirfx/spring-vaadin.git</url>
         <connection>scm:git:https://github.com/vladimirfx/spring-vaadin.git</connection>
         <developerConnection>scm:git:https://github.com/vladimirfx/spring-vaadin.git</developerConnection>
-        <tag>spring-vaadin-integration-4.0.CITC4</tag>
+        <tag>spring-vaadin-integration</tag>
     </scm>
 
     <issueManagement>
